[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/items/monarc_1.png" type="Texture" id=1]
[ext_resource path="res://guis/AchievementCard.gd" type="Script" id=2]
[ext_resource path="res://guis/MobileTheme.tres" type="Theme" id=3]
[ext_resource path="res://fonts/Marius.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/items/fi_1.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 7.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -100, -0.25, 0, 0.0457967, 78.5, 5.13319, -0.639177, 24.2952, 0.25, 0, 5.13319, -0.25, 0, 0.25, 0, -94.867, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 6, 7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -26.867, -0.25, 0, 0.206779, 121.367, 143.133, -0.73771, -1.40343, 0.25, 0, 143.133, -0.25, 0, 0.25, 0, -26.867, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 6, 7 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="AchievementCard" type="Panel"]
margin_left = 5.0
margin_top = -100.0
margin_right = 828.0
margin_bottom = -26.867
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Keep this hidden or it will flicker upon entering the scene."
}

[node name="TitleLabel" type="RichTextLabel" parent="."]
margin_left = 71.0
margin_top = 14.0
margin_right = 817.0
margin_bottom = 73.0
rect_clip_content = false
bbcode_enabled = true
bbcode_text = "[center][tornado radius=3 freq=2]ACHIEVEMENT![/tornado][/center]"
text = "ACHIEVEMENT!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="."]
margin_left = 83.0
margin_top = 68.0
margin_right = 531.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardSprite" type="Sprite" parent="."]
position = Vector2( 34.6784, 34.6231 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ShowBriefly = SubResource( 2 )

[node name="PhiParticles" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( 161.117, 97.1179 )
emitting = false
amount = 64
lifetime = 3.0
one_shot = true
explosiveness = 0.9
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 200, 1 )
initial_velocity = 150.0
angular_velocity = 900.0
angular_velocity_random = 0.3
orbit_velocity = 0.01
